--- a/fastlane/metadata/ar-SA/release_notes.txt
+++ b/fastlane/metadata/ar-SA/release_notes.txt
@@ -1,1 +1,1 @@
-• Small tweaks, bug fixes, and performance enhancements. Thanks for using Signal! 
+• تعديلات صغيرة وتصليحات للأعطال وتحسينات للأداء. شكرًا على استخدام سيجنال! 
