--- a/fastlane/metadata/he/release_notes.txt
+++ b/fastlane/metadata/he/release_notes.txt
@@ -1,1 +1,1 @@
-• Small tweaks, bug fixes, and performance enhancements. Thanks for using Signal! 
+• התאמות קטנות, תיקוני באגים ושיפורי ביצועים. תודה על השימוש ב–Signal! 
