--- a/fastlane/metadata/hr/release_notes.txt
+++ b/fastlane/metadata/hr/release_notes.txt
@@ -1,1 +1,1 @@
-• Small tweaks, bug fixes, and performance enhancements. Thanks for using Signal! 
+• Manja podešavanja, ispravci programskih pogrešaka i poboljšanje rada aplikacije. Hvala što koristite Signal! 
