--- a/fastlane/metadata/ja/release_notes.txt
+++ b/fastlane/metadata/ja/release_notes.txt
@@ -1,1 +1,1 @@
-• Small tweaks, bug fixes, and performance enhancements. Thanks for using Signal! 
+• 細かな微調整、バグ修正、パフォーマンスの向上。Signalをお使いいただきありがとうございます！ 
