--- a/fastlane/metadata/ms/release_notes.txt
+++ b/fastlane/metadata/ms/release_notes.txt
@@ -1,1 +1,1 @@
-• Small tweaks, bug fixes, and performance enhancements. Thanks for using Signal! 
+• Sedikit pengubahsuaian, pembaikan pepijat dan peningkatan prestasi. Terima kasih kerana menggunakan Signal! 
