--- a/fastlane/metadata/pl/release_notes.txt
+++ b/fastlane/metadata/pl/release_notes.txt
@@ -1,1 +1,1 @@
-• Small tweaks, bug fixes, and performance enhancements. Thanks for using Signal! 
+• Małe ulepszenia, poprawki błędów i zwiększona funkcjonalność. Dzięki, że korzystasz z Signal! 
