--- a/Signal/translations/ug.lproj/Localizable.strings
+++ b/Signal/translations/ug.lproj/Localizable.strings
@@ -782,7 +782,7 @@
 "CALL_VIEW_LEAVE_CALL_LABEL" = "چاقىرىقتىن ئايرىل";
 
 /* Accessibility label for the More button in the Call Controls row. */
-"CALL_VIEW_MORE_LABEL" = "More";
+"CALL_VIEW_MORE_LABEL" = "تېخىمۇ كۆپ";
 
 /* Accessibility label for muting the microphone */
 "CALL_VIEW_MUTE_LABEL" = "ئۈنسىز";
