--- a/fastlane/metadata/hi/release_notes.txt
+++ b/fastlane/metadata/hi/release_notes.txt
@@ -1,1 +1,1 @@
-• Small tweaks, bug fixes, and performance enhancements. Thanks for using Signal! 
+• छोटे-छोटे ट्वीक, बग फ़िक्स, और प्रदर्शन में सुधार। Signal का उपयोग करने के लिए धन्यवाद! 
