--- a/fastlane/metadata/id/release_notes.txt
+++ b/fastlane/metadata/id/release_notes.txt
@@ -1,1 +1,1 @@
-• Small tweaks, bug fixes, and performance enhancements. Thanks for using Signal! 
+• Penyesuaian kecil, perbaikan bug, dan peningkatan performa.  Terima kasih telah menggunakan Signal! 
