--- a/fastlane/metadata/ko/release_notes.txt
+++ b/fastlane/metadata/ko/release_notes.txt
@@ -1,1 +1,1 @@
-• Small tweaks, bug fixes, and performance enhancements. Thanks for using Signal! 
+• 사소한 변경 사항과 버그 수정 및 성능 개선. Signal을 이용해 주셔서 감사합니다! 
