--- a/fastlane/metadata/th/release_notes.txt
+++ b/fastlane/metadata/th/release_notes.txt
@@ -1,1 +1,1 @@
-• Small tweaks, bug fixes, and performance enhancements. Thanks for using Signal! 
+• มีการปรับเปลี่ยนเล็กน้อย พร้อมแก้ไขบั๊ก รวมถึงพัฒนาประสิทธิภาพให้ดียิ่งขึ้น ขอบคุณที่เลือกใช้ Signal! 
