--- a/fastlane/metadata/uk/release_notes.txt
+++ b/fastlane/metadata/uk/release_notes.txt
@@ -1,1 +1,1 @@
-• Small tweaks, bug fixes, and performance enhancements. Thanks for using Signal! 
+• Невеликі поліпшення, виправлення помилок і покращення роботи застосунку. Дякуємо, що використовуєте Signal! 
