--- a/fastlane/metadata/vi/release_notes.txt
+++ b/fastlane/metadata/vi/release_notes.txt
@@ -1,1 +1,1 @@
-• Small tweaks, bug fixes, and performance enhancements. Thanks for using Signal! 
+• Các tinh chỉnh, sửa lỗi, và cải thiện hiệu năng. Cảm ơn bạn đã sử dụng Signal! 
