Update release notes

--- a/fastlane/metadata/ar-SA/release_notes.txt
+++ b/fastlane/metadata/ar-SA/release_notes.txt
@@ -1,1 +1,1 @@
-• تعديلات صغيرة وتصليحات للأعطال وتحسينات للأداء. شكرًا على استخدام سيجنال! 
+• لقد أضفنا دعم أسماء مُستعارة مُخصّصة وملاحظات لأي شخص تُدردش معه على سيجنال، حتى وإن لم يكُن في جهات اتصال نظامك. تُقدم الملاحظات والأسماء المُستعارة طريقة سهلة وآمنة لتدوين معلومات إضافية عن جهات اتصال سيجنال الخاصة بك — وهي مُشفرة من طرف لِطرف ومحمية برقم سيجنال التعريفي الخاص بك حتى يُمكنك استرجاعُها بطريقة آمنة إذا أضعت هاتفك أيضًا.
