--- a/fastlane/metadata/da/release_notes.txt
+++ b/fastlane/metadata/da/release_notes.txt
@@ -1,1 +1,1 @@
-• Små tweaks, rettelser og forbedringer af appens præstation. Tak, fordi du bruger Signal! 
+• Vi har tilføjet understøttelse af brugerdefinerede kaldenavne og noter for alle, du chatter med på Signal, selvom de ikke er i dine systemkontakter. Uanset om du tilføjer de manglende bogstaver i en doven vens profilnavn eller en påmindelse om, hvor I mødtes, er det at skrive noter og kaldenavne en bekvem og sikker måde at få yderligere oplysninger om dine signalforbindelser gemt på – og de er krypteret og beskyttet af din Signal-kode, så de kan gendannes, hvis du også mister telefonen.
