--- a/fastlane/metadata/el/release_notes.txt
+++ b/fastlane/metadata/el/release_notes.txt
@@ -1,1 +1,1 @@
-• Μικρές τροποποιήσεις, επιδιορθώσεις σφαλμάτων και βελτιώσεις απόδοσης. Ευχαριστούμε που χρησιμοποιείς το Signal! 
+• Προσθέσαμε υποστήριξη για προσαρμοσμένα ψευδώνυμα και σημειώσεις για οποιοδήποτε άτομο συνομιλείς στο Signal, ακόμη και αν δεν βρίσκεται στις επαφές του συστήματός σου. Οι σημειώσεις και τα ψευδώνυμα παρέχουν έναν βολικό και ασφαλή τρόπο για να σημειώνεις πρόσθετες λεπτομέρειες σχετικά με τις συνδέσεις σου στο Signal, ενώ είναι κρυπτογραφημένες από άκρο σε άκρο — και προστατεύονται από το PIN σου στο Signal, ώστε να μπορούν να αποκατασταθούν με ασφάλεια αν χάσεις το τηλέφωνό σου.
