--- a/fastlane/metadata/fr-CA/release_notes.txt
+++ b/fastlane/metadata/fr-CA/release_notes.txt
@@ -1,1 +1,1 @@
-• Au menu : de petites modifications, des corrections de bugs et des gains de performance. Merci d’avoir choisi Signal. 
+• Nouveauté : vous pouvez maintenant associer des pseudos aux personnes avec qui vous discutez sur Signal, même si elles ne figurent pas dans vos contacts système. Une section dédiée vous permet aussi d’ajouter des notes personnalisées. Et comme toutes les informations saisies sur Signal, les infos que vous ajoutez au sujet de vos contacts sont chiffrées de bout en bout et protégées par votre code PIN. Vous pouvez donc les récupérer en toute sécurité, même si vous perdez votre téléphone.
