--- a/fastlane/metadata/hi/release_notes.txt
+++ b/fastlane/metadata/hi/release_notes.txt
@@ -1,1 +1,1 @@
-• छोटे-छोटे ट्वीक, बग फ़िक्स, और प्रदर्शन में सुधार। Signal का उपयोग करने के लिए धन्यवाद! 
+• हमने Signal पर आपके साथ चैट कर रहे व्यक्ति के लिए कस्टम उपनाम, नोट्स के लिए सपोर्ट जोड़ा है, भले ही वे आपके सिस्टम संपर्कों में न हों। आप किसी आलसी मित्र के प्रोफ़ाइल नाम में छूटे हुए अक्षर जोड़ रहे हों, या आप रिमाइंडर शामिल कर रहे हों, नोट्स, उपनाम आपके Signal कनेक्शन के बारे में अतिरिक्त विवरण लिखने का एक सुविधाजनक, सुरक्षित तरीका प्रदान करते हैं — वे एंड-टू-एंड एनक्रिप्टेड हैं आपके Signal पिन द्वारा सुरक्षित, ताकि यदि आपका फोन खो जाए तो उन्हें सुरक्षित रूप से रिस्टोर किया जा सके।
