--- a/fastlane/metadata/ja/release_notes.txt
+++ b/fastlane/metadata/ja/release_notes.txt
@@ -1,1 +1,1 @@
-• 細かな微調整、バグ修正、パフォーマンスの向上。Signalをお使いいただきありがとうございます！ 
+• Signal上でチャットしている相手（システムの連絡先に含まれていない相手も含みます）に、自分だけに分かるニックネームをつけたり、メモができたりするサポートを追加しました。メモとニックネームは、Signalコネクションについての追加情報を書き留める手軽で安全な方法です。これらはエンドツーエンドで暗号化され、さらにSignal PINによって保護されているので、電話を紛失した場合でも安全に復元できます。
