--- a/fastlane/metadata/nl-NL/release_notes.txt
+++ b/fastlane/metadata/nl-NL/release_notes.txt
@@ -1,1 +1,1 @@
-• Kleine aanpassingen, bugfixes en prestatieverbeteringen. Bedankt dat je Signal gebruikt! 
+• We hebben ondersteuning toegevoegd voor bijnamen en notities voor iedereen met wie je chat op Signal, zelfs als ze niet in je telefooncontacten staan. Of je nu de profielnaam van een vriend aanpast of noteert waar je iemand van kent, met notities en bijnamen voeg je handig en veilig extra gegevens toe aan je Signal-contacten. Notities en bijnamen zijn end-to-end versleuteld en beschermd met je Signal-pincode, zodat ze veilig kunnen worden hersteld, ook als je je telefoon bent kwijtgeraakt.
