--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,1 +1,1 @@
-• Небольшие изменения, исправления ошибок и улучшения производительности. Спасибо, что используете Signal! 
+• Мы добавили для вас возможность создавать никнеймы и заметки для всех, с кем вы общаетесь в Signal, даже если их нет в ваших системных контактах. Неважно, исправляете ли вы имя профиля ленивого друга или оставляете себе напоминание о том, где вы познакомились, заметки и никнеймы — это удобный и безопасный способ добавить сведения о ваших контактах Signal. Они защищены сквозным шифрованием и вашим PIN-кодом Signal, поэтому их можно безопасно восстановить при утере телефона.
