--- a/fastlane/metadata/uk/release_notes.txt
+++ b/fastlane/metadata/uk/release_notes.txt
@@ -1,1 +1,1 @@
-• Невеликі поліпшення, виправлення помилок і покращення роботи застосунку. Дякуємо, що використовуєте Signal! 
+• Тепер ви можете додавати умовні імена своїх співрозмовників у Signal і примітки про них, навіть якщо не маєте їх у контактах пристрою. Можливо, ви хочете виправити ім'я профілю, в якому неуважний друг пропустив кілька літер, або записати, звідки ви знаєте свого співрозмовника. Для цього є примітки й умовні імена — зручний і безпечний спосіб додавати інформацію про контакти Signal. Вони захищені наскрізним шифруванням і PIN-кодом Signal, тож ви точно зможете відновити їх, якщо загубите телефон.
