--- a/fastlane/metadata/zh-Hans/release_notes.txt
+++ b/fastlane/metadata/zh-Hans/release_notes.txt
@@ -1,1 +1,1 @@
-• 我们进行了功能微调、漏洞修复和性能强化。感谢使用 Signal！ 
+• 我们添加了对自定义昵称和备注的支持，方便您给 Signal 聊天对象添加备注，即使对方不在您的系统通讯录中也同样支持。备注和昵称可以让您方便和安全地记下有关 Signal 密友的详细信息——这些信息经过端对端加密，并受您的 Signal 密码保护，因此即使您丢失了手机也能安全恢复这些信息。
