--- a/fastlane/metadata/zh-Hant/release_notes.txt
+++ b/fastlane/metadata/zh-Hant/release_notes.txt
@@ -1,1 +1,1 @@
-• 細微調整、問題修復和效能改善。感謝使用 Signal！ 
+• 我們為正與你在 Signal 上聊天的任何人添加了自訂暱稱和備註的支援，即使他們不在你的系統通訊錄中。無論你是要在朋友的個人檔案名稱中添加缺少的字母，還是要提醒你們曾在哪裡見過面，備註和暱稱都提供了一種方便且安全的方式，讓你記下有關 Signal 人脈的其他資訊 — 而且它們是透過端對端加密，並受你的 Signal PIN 碼保護，即使遺失手機，你也可以安全地還原它們。
