--- a/fastlane/metadata/he/release_notes.txt
+++ b/fastlane/metadata/he/release_notes.txt
@@ -1,1 +1,1 @@
-• התאמות קטנות, תיקוני באגים ושיפורי ביצועים. תודה על השימוש ב–Signal! 
+• הוספנו תמיכה בהערות וכינויים בהתאמה אישית לכל אחד ואחת שמדברים איתם ב–Signal, אפילו אם הם לא נמצאים באנשי הקשר של המערכת שלך. הערות וכינויים מספקים דרך נוחה ובטוחה להוסיף פרטים על חברי Signal שלך — והם מוצפנים מקצה לקצה ומוגנים על ידי קוד ה–PIN שלך ב–Signal, כך שאפשר לשחזר אותם באופן בטוח גם אם איבדת את הטלפון שלך.
