--- a/fastlane/metadata/ko/release_notes.txt
+++ b/fastlane/metadata/ko/release_notes.txt
@@ -1,1 +1,1 @@
-• 사소한 변경 사항과 버그 수정 및 성능 개선. Signal을 이용해 주셔서 감사합니다! 
+• Signal에서 대화하는 사람을 내 기기 연락처에 저장하지 않은 경우에도 해당 사용자에 대한 사용자 지정 별칭과 메모를 사용할 수 있도록 지원을 추가했습니다. 메모와 별칭을 사용하면 Signal 커넥션에 관한 세부 정보를 안전하고 편리하게 적어둘 수 있습니다. 이러한 정보는 사용자의 Signal PIN을 사용하여 엔드투엔드 암호화로 보호되므로 휴대폰을 분실할 경우에도 안전하게 복원할 수 있습니다.
