Update release notes

--- a/fastlane/metadata/ar-SA/release_notes.txt
+++ b/fastlane/metadata/ar-SA/release_notes.txt
@@ -1,1 +1,1 @@
-• يُحسِّن هذا التحديث تخطيط رسائل الوسائط التي تتضمّن ردودًا مُقتبسة، كما يُصلِح فجوة مرئية كانت تظهر بين شريط البحث وقائمة محادثاتك عند تفعيل خيار "تخفيض الشفافية" في إعدادات تسهيلات الاستخدام على نظام iOS.
+• لقد عهدنا على أنفسنا أننا لن نفعل ذلك أبدًا، وأننا لن نكون مثل التطبيقات الأخرى فيما يتعلق بإصدار ملاحظات كسولة، حيث أن هذا التحديث يتضمّن بالفعل 'إصلاحات للأخطاء وتحسينات في الأداء'.
