--- a/fastlane/metadata/el/release_notes.txt
+++ b/fastlane/metadata/el/release_notes.txt
@@ -1,1 +1,1 @@
-• Αυτή η ενημέρωση βελτιώνει τη διάταξη των μηνυμάτων πολυμέσων με απαντήσεις σε εισαγωγικά και διορθώνει επίσης ένα οπτικό κενό που μπορούσε να εμφανιστεί μεταξύ της γραμμής αναζήτησης και της λίστας συνομιλιών σου.
+• Διορθώσεις σφαλμάτων και βελτιώσεις απόδοσης.
