--- a/fastlane/metadata/ms/release_notes.txt
+++ b/fastlane/metadata/ms/release_notes.txt
@@ -1,1 +1,1 @@
-• Kemas kini ini menambah baik reka letak mesej media dengan balasan yang dipetik dan membetulkan jurang visual yang muncul antara bar carian dan senarai sembang anda.
+• Pembaikan pepijat dan kemajuan prestasi.
