--- a/fastlane/metadata/th/release_notes.txt
+++ b/fastlane/metadata/th/release_notes.txt
@@ -1,1 +1,1 @@
-• รุ่นอัปเดตนี้มาพร้อมการปรับปรุงเลย์เอาต์ของการตอบกลับข้อความที่มีไฟล์สื่อแนบ รวมถึงยังแก้ไขช่องว่างบนหน้าจอที่อาจเคยปรากฏระหว่างแถบค้นหาและรายการแชท
+• แก้ไขบั๊กและปรับปรุงอินเทอร์เฟซผู้ใช้
