--- a/fastlane/metadata/uk/release_notes.txt
+++ b/fastlane/metadata/uk/release_notes.txt
@@ -1,1 +1,1 @@
-• Ми поліпшили оформлення повідомлень з медіафайлами в цитатах, а ще прибрали візуальну прогалину між рядком пошуку й списком чатів, яка з'являлася, якщо в налаштуваннях доступності iOS було ввімкнено зменшення прозорості.
+• Ми обіцяли собі, що ніколи так не робитимемо, ніколи не будемо, як інші застосунки з їхніми шаблонними описами оновлень. Але в цьому оновленні й справді просто «виправлення помилок і загальні поліпшення».
