--- a/fastlane/metadata/de-DE/release_notes.txt
+++ b/fastlane/metadata/de-DE/release_notes.txt
@@ -1,1 +1,1 @@
-• Dieses Update verbessert das Layout von Medien-Mitteilungen mithilfe von zitierten Antworten. Außerdem wurde ein optischer Abstand zwischen der Suchleiste und deiner Chatliste entfernt, der erschien, wenn die Einstellung »Transparenz reduzieren« in den iOS-Bedienungshilfen aktiviert war.
+• Wir hatten uns eigentlich vorgenommen, dass wir das nie tun würden, dass wir nicht wie die anderen Apps mit ihren lahmen Versionshinweisen sein würden – aber in diesem Update geht es tatsächlich nur um »Fehlerbehebungen und Performance-Verbesserungen«.
