--- a/fastlane/metadata/fr-FR/release_notes.txt
+++ b/fastlane/metadata/fr-FR/release_notes.txt
@@ -1,1 +1,1 @@
-• Cette mise à jour améliore l'affichage des messages multimédias cités dans des réponses. Et vous vous rappelez de l'espace vide entre la barre de recherche et la liste des conversations ? Il apparaissait lorsque le réglage d'accessibilité iOS "Réduire la transparence" était activé. Eh bien, hop, on l'a fait disparaître !
+• On s’était toujours dit que ça n’arriverait jamais… qu’on ne ferait pas comme les autres applications qui publient toujours les mêmes notes de mise à jour… et pourtant, notre nouvelle version comprend aussi « des corrections de bugs et des améliorations de performance. »
