--- a/fastlane/metadata/he/release_notes.txt
+++ b/fastlane/metadata/he/release_notes.txt
@@ -1,1 +1,1 @@
-• העדכון הזה משפר את התצוגה של הודעות מדיה עם תשובות מצוטטות, וגם מתקן פער ויזואלי שלפעמים הופיע בין סרגל החיפוש לרשימת הצ׳אטים שלך.
+• תיקוני באגים ושיפורים בממשק המשתמש.
