--- a/fastlane/metadata/hi/release_notes.txt
+++ b/fastlane/metadata/hi/release_notes.txt
@@ -1,1 +1,1 @@
-• इस अपडेट से, क्वोट किए गए जवाबों की मदद से मीडिया संदेशों के लेआउट में सुधार होता है। साथ ही, "पारदर्शिता कम करें" iOS एक्सेसिबिलिटी सेटिंग चालू करने पर, सर्च बार और आपकी चैट सूची के बीच में दिखाई देने वाला विज़ुअल गैप भी ठीक होता है।
+• हमने खुद से कहा कि हम ऐसा कभी नहीं करेंगे, कि हम आलसी रिलीज़ नोट्स वाले अन्य ऐप्स की तरह नहीं होंगे, लेकिन इस अपडेट में वास्तव में "बग फिक्स और कार्य-प्रदर्शन सुधार" शामिल हैं।
