--- a/fastlane/metadata/hr/release_notes.txt
+++ b/fastlane/metadata/hr/release_notes.txt
@@ -1,1 +1,1 @@
-• Ovo ažuriranje poboljšava izgled poruka s medijskim zapisima u citiranim odgovorima te ispravlja razmak koji se pojavljivao između trake za pretraživanje i popisa razgovora.
+• Ispravci programskih pogrešaka i poboljšanje performansa aplikacije.
