--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,1 +1,1 @@
-• В этом обновлении улучшена компоновка медиафайлов, приложенных к ответам с цитатами, а также исправлен визуальный разрыв, который возникал между строкой поиска и списком чатов при включённой настройке специальных возможностей iOS «Уменьшить прозрачность».
+• Мы говорили себе, что никогда не будем этого делать и не станем уподобляться другим приложениям с их скучными заметками о релизах, но это обновление действительно содержит «исправления ошибок и улучшения производительности».
