Update release notes

--- a/fastlane/metadata/ar-SA/release_notes.txt
+++ b/fastlane/metadata/ar-SA/release_notes.txt
@@ -1,1 +1,1 @@
-• Small tweaks, bug fixes, and performance enhancements. Thanks for using Signal! 
+• لقد عهدنا على أنفسنا أننا لن نفعل ذلك أبدًا، وأننا لن نكون مثل التطبيقات الأخرى فيما يتعلق بإصدار ملاحظات كسولة، حيث أن هذا التحديث يتضمّن بالفعل 'إصلاحات للأخطاء وتحسينات في الأداء'.
