--- a/fastlane/metadata/da/release_notes.txt
+++ b/fastlane/metadata/da/release_notes.txt
@@ -1,1 +1,1 @@
-• Small tweaks, bug fixes, and performance enhancements. Thanks for using Signal! 
+• Vi sagde til os selv, at vi aldrig ville gøre dette, at vi ikke ville være som de andre apps med deres dovne udgivelsesnoter, men denne opdatering indeholder faktisk "fejlrettelser og ydeevneforbedringer."
