--- a/fastlane/metadata/id/release_notes.txt
+++ b/fastlane/metadata/id/release_notes.txt
@@ -1,1 +1,1 @@
-• Small tweaks, bug fixes, and performance enhancements. Thanks for using Signal! 
+• Perbaikan bug dan penyempurnaan pada kinerja aplikasi.
