--- a/fastlane/metadata/it/release_notes.txt
+++ b/fastlane/metadata/it/release_notes.txt
@@ -1,1 +1,1 @@
-• Small tweaks, bug fixes, and performance enhancements. Thanks for using Signal! 
+• Quante volte hai letto "Bug risolti e miglioramenti vari" nelle note dell'aggiornamento di un'app? Tante. Beh, aggiungi anche questa: stavolta abbiamo effettivamente risolto bug e migliorato l'interfaccia dell'app.
