--- a/fastlane/metadata/ro/release_notes.txt
+++ b/fastlane/metadata/ro/release_notes.txt
@@ -1,1 +1,1 @@
-• Small tweaks, bug fixes, and performance enhancements. Thanks for using Signal! 
+• Ne-am spus că nu vom face niciodată acest lucru, că nu vom fi ca celelalte aplicații cu notele lor clasice de lansare, dar această actualizare chiar include „remedieri de erori și îmbunătățiri de performanță”.
