--- a/fastlane/metadata/uk/release_notes.txt
+++ b/fastlane/metadata/uk/release_notes.txt
@@ -1,1 +1,1 @@
-• Small tweaks, bug fixes, and performance enhancements. Thanks for using Signal! 
+• Ми обіцяли собі, що ніколи такого не зробимо, ніколи не будемо, як усі інші застосунки з їх ледачими описами оновлень, але нове оновлення дійсно містить просто «виправлення помилок і загальні поліпшення».
