--- a/fastlane/metadata/de-DE/release_notes.txt
+++ b/fastlane/metadata/de-DE/release_notes.txt
@@ -1,1 +1,1 @@
-• Small tweaks, bug fixes, and performance enhancements. Thanks for using Signal! 
+• Wir hatten uns eigentlich vorgenommen, dass wir das nie tun würden, dass wir nicht wie die anderen Apps mit ihren lahmen Versionshinweisen sein würden – aber in diesem Update geht es tatsächlich nur um »Fehlerbehebungen und Performance-Verbesserungen«.
