--- a/fastlane/metadata/fr-FR/release_notes.txt
+++ b/fastlane/metadata/fr-FR/release_notes.txt
@@ -1,1 +1,1 @@
-• Small tweaks, bug fixes, and performance enhancements. Thanks for using Signal! 
+• On s’était toujours dit que ça n’arriverait jamais… qu’on ne ferait pas comme les autres applications qui publient toujours les mêmes notes de mise à jour… et pourtant, notre nouvelle version comprend aussi « des corrections de bugs et des améliorations de performance. »
